--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a small library for the lcd controller pcd8544i, used in 
+This is a small library for the lcd controller pcd8544, used in 
 Nokia 3310, 5110 and probably others, for Arduino (http://www.arduino.cc/) and
 The Maple (http://leaflabs.com/devices/maple/). Since the controller is'nt
 pixel adressable it is used most as a text display, but simple graphics is
